builds/any/rootfs/wheezy/common/overlay/etc/iptables/rules.v4
# sample configuration for iptables service
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack ! --ctstate NEW,UNTRACKED -j REJECT --reject-with icmp-admin-prohibited
-A INPUT -d 255.255.255.255/32 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-admin-prohibited
-A FORWARD -j REJECT --reject-with icmp-admin-prohibited
COMMIT
